syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/megamind/protos/analytics/scenarios/iot";
option java_package = "ru.yandex.alice.megamind.protos.analytics.scenarios.iot";

import "mapreduce/yt/interface/protos/extension.proto";

message THypothesis {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TAction {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        reserved 56788;

        string instance = 1 [json_name = "instance", (NYT.column_name) = "instance"];
        string type = 2 [json_name = "type", (NYT.column_name) = "type"];
        string unit = 3 [json_name = "unit", (NYT.column_name) = "unit"];
        string relative = 4 [json_name = "relative", (NYT.column_name) = "relative"];
        oneof Value {
            bool OnOfCapabilityValue = 5 [json_name = "on_of_capability_value", (NYT.column_name) = "on_of_capability_value"];
            bool ToggleCapabilityValue = 6 [json_name = "toggle_capability_value", (NYT.column_name) = "toggle_capability_value"];
            string CustomButtonCapabilityValue = 7 [json_name = "custom_button_capability_value", (NYT.column_name) = "custom_button_capability_value"];
            string ColorSettingCapabilityValue = 8 [json_name = "color_setting_capability_value", (NYT.column_name) = "color_setting_capability_value"];
            string RangeCapabilityValue = 9 [json_name = "range_capability_value", (NYT.column_name) = "range_capability_value"];
            string ModeCapabilityValue = 10 [json_name = "mode_capability_value", (NYT.column_name) = "mode_capability_value"];
            string QuasarServerActionCapabilityValue = 11 [json_name = "quasar_server_action_capability_value", (NYT.column_name) = "quasar_server_action_capability_value"];
        }
        string target = 100 [json_name = "target", (NYT.column_name) = "target"];
    }

    string ID = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated string Devices = 2 [json_name = "devices", (NYT.column_name) = "devices"];
    repeated string Rooms = 3 [json_name = "rooms", (NYT.column_name) = "rooms"];
    repeated string Groups = 4 [json_name = "groups", (NYT.column_name) = "groups"];
    string Scenario = 5 [json_name = "scenario", (NYT.column_name) = "scenario"];
    TAction Action = 6 [json_name = "action", (NYT.column_name) = "action"];

    reserved 7;

    string Type = 8 [json_name = "type", (NYT.column_name) = "type"];
}

message THypotheses {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated THypothesis Hypotheses = 1 [json_name = "hypotheses", (NYT.column_name) = "hypotheses"];
}

message TSelectedHypothesis {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ID = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated string Devices = 2 [json_name = "devices", (NYT.column_name) = "devices"];
    TTimeInfo TimeInfo = 3 [json_name = "time_info", (NYT.column_name) = "time_info"];
}

message TSelectedHypotheses {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TSelectedHypothesis SelectedHypotheses = 1 [json_name = "selected_hypotheses", (NYT.column_name) = "selected_hypotheses"];
}

message TTimeInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    reserved 56788;

    oneof Value {
        TTimePoint TimePoint = 1 [json_name = "time_point", (NYT.column_name) = "time_point"];
        TTimeInterval TimeInterval = 2 [json_name = "time_interval", (NYT.column_name) = "time_interval"];
    }
}

message TTimePoint {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Time = 1 [json_name = "time", (NYT.column_name) = "time"];
}

message TTimeInterval {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string StartTime = 1 [json_name = "start_time", (NYT.column_name) = "start_time"];
    string EndTime = 2 [json_name = "end_time", (NYT.column_name) = "end_time"];
}

// About the format: https://wiki.yandex-team.ru/users/aaulayev/iotanalyticsinfo/#novyjjformatanalyticsinfo
message TReaction {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TActionParameters {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string CapabilityType = 1 [json_name = "capability_type", (NYT.column_name) = "capability_type"];
        string CapabilityInstance = 2 [json_name = "capability_instance", (NYT.column_name) = "capability_instance"];
        string CapabilityUnit = 3 [json_name = "capability_unit", (NYT.column_name) = "capability_unit"];
        string RelativityType = 4 [json_name = "relativity_type", (NYT.column_name) = "relativity_type"];
        string CapabilityValue = 5 [json_name = "capability_value", (NYT.column_name) = "capability_value"];

        repeated string Devices = 6 [json_name = "devices", (NYT.column_name) = "devices"];

        TTimeInfo TimeInfo = 7 [json_name = "time_info", (NYT.column_name) = "time_info"];
    }

    message TQueryParameters {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string Target = 1 [json_name = "target", (NYT.column_name) = "target"];
        repeated string Devices = 2 [json_name = "devices", (NYT.column_name) = "devices"];
    }

    message TScenarioParameters {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        repeated string Scenarios = 1 [json_name = "scenarios", (NYT.column_name) = "scenarios"];
    }

    string Type = 1 [json_name = "type", (NYT.column_name) = "type"];

    oneof Parameters {
        option (NYT.variant_field_name) = "parameters";

        TActionParameters ActionParameters = 2 [json_name = "action_parameters", (NYT.column_name) = "action_parameters"];
        TQueryParameters QueryParameters = 3 [json_name = "query_parameters", (NYT.column_name) = "query_parameters"];
        TScenarioParameters ScenarioParameters = 4 [json_name = "scenario_parameters", (NYT.column_name) = "scenario_parameters"];
    }
}

message TReactions {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TReaction Reactions = 1 [json_name = "reactions", (NYT.column_name) = "reactions"];
}
