syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";
option java_outer_classname = "QuasarDevices";

import "alice/protos/data/device/info.proto";
import "alice/protos/data/location/group.proto";
import "alice/protos/data/location/room.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TUserDevice {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // To compat with TIoTUserInfo.TDevice
    reserved 3, 5, 6, 7, 8, 11, 12, 15, 16, 17, 20, 21, 22, 23, 24, 26, 27;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
    EUserDeviceType Type = 4 [json_name = "type", (NYT.column_name) = "type"];
    string RoomId = 9 [json_name = "room_id", (NYT.column_name) = "room_id"];
    repeated string GroupIds = 10 [json_name = "group_ids", (NYT.column_name) = "group_ids"];

    TUserDeviceInfo DeviceInfo = 13 [json_name = "device_info", (NYT.column_name) = "device_info"];
    TUserQuasarInfo QuasarInfo = 14 [json_name = "quasar_info", (NYT.column_name) = "quasar_info"];
    string HouseholdId = 18 [json_name = "household_id", (NYT.column_name) = "household_id"];

    EUserDeviceType OriginalType = 19 [json_name = "original_type", (NYT.column_name) = "original_type"];

    bool Favorite = 25 [json_name = "favorite", (NYT.column_name) = "favorite"];
}

message TQuasarDevicesInfo {
    repeated TUserRoom Rooms = 1 [json_name = "rooms", (NYT.column_name) = "rooms"];
    repeated TUserGroup Groups = 2 [json_name = "groups", (NYT.column_name) = "groups"];
    repeated TUserDevice Devices = 3 [json_name = "devices", (NYT.column_name) = "devices"];
}
