syntax = "proto3";

import "mapreduce/yt/interface/protos/extension.proto";

import "google/protobuf/descriptor.proto";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/entities";
option java_package = "ru.yandex.alice.protos.entities";
option java_outer_classname = "EntitiesProto";


//
// NLU: sys.datetime
// See https://docs.yandex-team.ru/alice-scenarios/nlu/entities/sys#sys.date-sys.time-sys.datetime
//
message TSysDatetimeValue {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    TSysDateValue DateValue = 1 [json_name = "date_value", (NYT.column_name) = "date_value"];
    TSysTimeValue TimeValue = 2 [json_name = "time_value", (NYT.column_name) = "time_value"];
}

//
// NLU: sys.date
//
message TSysDateValue {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof ValueYears {
        option (NYT.variant_field_name) = "optional_years";
        int32 Years = 1 [json_name = "years", (NYT.column_name) = "years"];
    }
    oneof ValueMonths {
        option (NYT.variant_field_name) = "optional_months";
        int32 Months = 2 [json_name = "months", (NYT.column_name) = "months"];
    }
    oneof ValueDays {
        option (NYT.variant_field_name) = "optional_days";
        int32 Days = 3 [json_name = "days", (NYT.column_name) = "days"];
    }
    oneof ValueDayOfWeek {
        option (NYT.variant_field_name) = "optional_day_of_week";
        int32 DayOfWeek = 4 [json_name = "day_of_week", (NYT.column_name) = "day_of_week"];
    }
    oneof ValueWeeksCount {
        option (NYT.variant_field_name) = "optional_weeks_count";
        int32 WeeksCount = 5 [json_name = "weeks_count", (NYT.column_name) = "weeks_count"];
    }
    oneof ValueYearsRelative {
        option (NYT.variant_field_name) = "optional_years_relative";
        bool YearsRelative = 6 [json_name = "years_relative", (NYT.column_name) = "years_relative"];
    }
    oneof ValueMonthsRelative {
        option (NYT.variant_field_name) = "optional_months_relative";
        bool MonthsRelative = 7 [json_name = "months_relative", (NYT.column_name) = "months_relative"];
    }
    oneof ValueDaysRelative {
        option (NYT.variant_field_name) = "optional_days_relative";
        bool DaysRelative = 8 [json_name = "days_relative", (NYT.column_name) = "days_relative"];
    }
    oneof ValueWeeksRelative {
        option (NYT.variant_field_name) = "optional_weeks_relative";
        bool WeeksRelative = 9 [json_name = "weeks_relative", (NYT.column_name) = "weeks_relative"];
    }
}

//
// NLU: sys.time
//
message TSysTimeValue {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof ValueHours {
        option (NYT.variant_field_name) = "optional_hours";
        int32 Hours = 1 [json_name = "hours", (NYT.column_name) = "hours"];
    }
    oneof ValueMinutes {
        option (NYT.variant_field_name) = "optional_minutes";
        int32 Minutes = 2 [json_name = "minutes", (NYT.column_name) = "minutes"];
    }
    oneof ValueSeconds {
        option (NYT.variant_field_name) = "optional_seconds";
        int32 Seconds = 3 [json_name = "seconds", (NYT.column_name) = "seconds"];
    }
    oneof ValuePeriod {
        option (NYT.variant_field_name) = "optional_period";
        string Period = 4 [json_name = "period", (NYT.column_name) = "period"]; // "am"/"pm"
    }
    oneof ValueHoursRelative {
        option (NYT.variant_field_name) = "optional_hours_relative";
        bool HoursRelative = 5 [json_name = "hours_relative", (NYT.column_name) = "hours_relative"];
    }
    oneof ValueMinutesRelative {
        option (NYT.variant_field_name) = "optional_minutes_relative";
        bool MinutesRelative = 6 [json_name = "minutes_relative", (NYT.column_name) = "minutes_relative"];
    }
    oneof ValueSecondsRelative {
        option (NYT.variant_field_name) = "optional_seconds_relative";
        bool SecondsRelative = 7 [json_name = "seconds_relative", (NYT.column_name) = "seconds_relative"];
    }
}
